testsuite/tests/properties/invalid_dflt_arg_val/bad_expr/test.lkt
from common import FooNode

class Example: FooNode {
    @exported fun p(a: Bool=Bool): Bool = a
}
